| Bug #16455 | ndbd crashes on data import | ||
|---|---|---|---|
| Submitted: | 12 Jan 2006 16:28 | Modified: | 25 Jan 2006 16:53 |
| Reporter: | Arne Hüggenberg | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S1 (Critical) |
| Version: | 5.1.4-alpha | OS: | Linux (Gentoo AMD64) |
| Assigned to: | Jonas Oreland | Target Version: | |
[12 Jan 2006 16:28]
Arne Hüggenberg
[12 Jan 2006 17:05]
Jonas Oreland
Could you upload you import script (wo/ data, just the table definitions)
[12 Jan 2006 17:24]
Valeriy Kravchuk
> Would it be sufficient to send the Definition of the database whose import > caused the crash documented in the Trace? I believe, yes. So, please, upload it.
[12 Jan 2006 17:57]
Arne Hüggenberg
from a fresh start: db2b dumps # for i in *.ndb; do echo $i; mysql-501 --socket /var/run/mysqld/mysqld.sock --password=xxxxx < $i; done xxx.dump.ndb xxx.dump.ndb xxx.dump.ndb xxx.dump.ndb xxx.dump.ndb xxx.dump.ndb xxx.dump.ndb xxx.dump.ndb xxx.dump.ndb xxx.dump.ndb xxx.dump.ndb xxx.dump.ndb xxx.dump.ndb bvb_pressemail.dump.ndb ERROR 1005 (HY000) at line 331: Can't create table 'bvb_pressemail.email' (errno: 4009) Time: Thursday 12 January 2006 - 17:29:20 Status: Temporary error, restart node Message: Internal program error (failed ndbrequire) (Internal error, programming error or missing error message, please report a bug) Error: 2341 Error data: Dbdict.cpp Error object: DBDICT (Line: 4964) 0x0000000e Program: ndbd-501 Pid: 8083 Trace: /var/lib/mysql-cluster/ndb_3_trace.log.5 Version: Version 5.1.4 (alpha) ***EOM*** mysql-501 -p --socket /var/run/mysqld/mysqld.sock < bvb_pressemail.dump.ndb mysqldump-501 --socket /var/run/mysqld/mysqld.sock -p -d bvb_pressemail > bvb_pressemail_defs.dump
[13 Jan 2006 13:38]
Jonas Oreland
Hi I tried sh> for i in 1 2 3 4 5 6 7 8 9 10; do mysql test < ~/dl/bvb_pressemail_defs.dump; done a couple of times wo/ problem (on 5.1.6) Can you also send the xxx.dump.ndb files? (as it seems they need to be loaded first) Also what is you config.ini
[16 Jan 2006 17:58]
Arne Hüggenberg
trace log of crash for import of bvb_table_defs
Attachment: ndb_2_trace.log.6.gz (application/x-gzip, text), 61.25 KiB.
[18 Jan 2006 16:05]
Arne Hüggenberg
issue still exists with 5.1.5-alpha
[19 Jan 2006 14:16]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/1343
[19 Jan 2006 14:17]
Jonas Oreland
Hi Thanx for the bug report...I just fixed it...will be hopefully be in next release, 5.1.6
[23 Jan 2006 9:42]
Jonas Oreland
Pushed into 5.1.6
[24 Jan 2006 12:54]
Jon Stephens
What actually caused the node to crash?
[24 Jan 2006 12:59]
Jonas Oreland
Crash due to unhandled resource shortage I also changed so that resource limit is calculated smarter resource = string buffer pool
[24 Jan 2006 13:51]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented bugfix in 5.1.6 changelog; closed.
[25 Jan 2006 16:53]
Arne Hüggenberg
just confirmed the fix on todays checkout of 5.1-new branch
