bug#16455 - ndb crash when running of of rope pool